--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.10.1",
     "react-router-dom": "^7.10.1",
     "sweetalert2": "^11.26.3",
