--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router": "^7.10.1",
     "react-router-dom": "^7.10.1",
     "sweetalert2": "^11.26.3",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
