--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.90.12",
+    "aos": "^2.3.4",
     "axios": "^1.13.2",
     "firebase": "^12.6.0",
     "lucide-react": "^0.556.0",
@@ -22,7 +23,8 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.10.1",
     "react-router-dom": "^7.10.1",
-    "sweetalert2": "^11.26.3",
+    "react-share": "^5.2.2",
+    "sweetalert2": "^11.26.4",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17"
   },
