--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@tanstack/react-query": "^5.90.12",
     "aos": "^2.3.4",
     "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
     "firebase": "^12.6.0",
     "lucide-react": "^0.556.0",
     "react": "^19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
