--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.556.0",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
