--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
     "firebase": "^12.6.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.556.0",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
