--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.90.12",
     "@tippyjs/react": "^4.2.6",
+    "@vercel/analytics": "^1.6.1",
     "aos": "^2.3.4",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
